--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ flask==0.12.1
 flask-sqlalchemy==2.2
 flask-migrate==2.0.3
 https://github.com/mattupstate/flask-security/archive/develop.zip
+gunicorn==19.7.1
